// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should be able to render 1`] = `
<div
  className="mdc-form-field"
>
  <div
    className="mdc-checkbox"
  >
    <input
      className="mdc-checkbox__native-control"
      id="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="checkbox"
    />
    <div
      className="mdc-checkbox__background"
    >
      <svg
        className="mdc-checkbox__checkmark"
        viewBox="0 0 24 24"
      >
        <path
          className="mdc-checkbox__checkmark__path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="white"
        />
      </svg>
      <div
        className="mdc-checkbox__mixedmark"
      />
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> should be able to render with a label 1`] = `
<div
  className="mdc-form-field"
>
  <div
    className="mdc-checkbox"
  >
    <input
      className="mdc-checkbox__native-control"
      id="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="checkbox"
    />
    <div
      className="mdc-checkbox__background"
    >
      <svg
        className="mdc-checkbox__checkmark"
        viewBox="0 0 24 24"
      >
        <path
          className="mdc-checkbox__checkmark__path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="white"
        />
      </svg>
      <div
        className="mdc-checkbox__mixedmark"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    My Checkbox Label
  </label>
</div>
`;

exports[`<Checkbox /> should render as checked 1`] = `
<div
  className="mdc-form-field"
>
  <div
    className="mdc-checkbox"
  >
    <input
      className="mdc-checkbox__native-control"
      id="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="checkbox"
    />
    <div
      className="mdc-checkbox__background"
    >
      <svg
        className="mdc-checkbox__checkmark"
        viewBox="0 0 24 24"
      >
        <path
          className="mdc-checkbox__checkmark__path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="white"
        />
      </svg>
      <div
        className="mdc-checkbox__mixedmark"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    My Checkbox Label
  </label>
</div>
`;

exports[`<Checkbox /> should render as disabled 1`] = `
<div
  className="mdc-form-field"
>
  <div
    className="mdc-checkbox"
  >
    <input
      className="mdc-checkbox__native-control"
      id="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="checkbox"
    />
    <div
      className="mdc-checkbox__background"
    >
      <svg
        className="mdc-checkbox__checkmark"
        viewBox="0 0 24 24"
      >
        <path
          className="mdc-checkbox__checkmark__path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="white"
        />
      </svg>
      <div
        className="mdc-checkbox__mixedmark"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    My Checkbox Label
  </label>
</div>
`;

exports[`<Checkbox /> should render indeterminate 1`] = `
<div
  className="mdc-form-field"
>
  <div
    className="mdc-checkbox"
  >
    <input
      className="mdc-checkbox__native-control"
      id="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
      type="checkbox"
    />
    <div
      className="mdc-checkbox__background"
    >
      <svg
        className="mdc-checkbox__checkmark"
        viewBox="0 0 24 24"
      >
        <path
          className="mdc-checkbox__checkmark__path"
          d="M1.73,12.91 8.1,19.28 22.79,4.59"
          fill="none"
          stroke="white"
        />
      </svg>
      <div
        className="mdc-checkbox__mixedmark"
      />
    </div>
  </div>
  <label
    htmlFor="mdc-checkbox--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    My Checkbox Label
  </label>
</div>
`;
